sort is now a List<String>